--- a/password/index.html
+++ b/password/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <main>
-        <p>asdfgghkl</p>
+        <p id="result"></p>
 
-        <button>Password Generator</button>
+        <button id="btn">Password Generator</button>
 
         <fieldset>
             <legend>Option</legend>
@@ -20,11 +20,11 @@
             </label>
             <label for="">
                 Number
-                <input type="checkbox">
+                <input type="checkbox" id="numbers-checkbox">
             </label>
             <label for="">
                 Symbol
-                <input type="checkbox">
+                <input type="checkbox" id = "symbols-checkbox">
             </label>
         </fieldset>
     </main>
