--- a/MySlideshow/index.html
+++ b/MySlideshow/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <main>
-        <img src="pic0.png" alt="" width="256" height="192">
+        <img src="pic0.png" alt="" width="256" height="192" id="main-image">
 
         <div class="container">
-            <button>←</button>
-            <button>→</button>    
+            <button id="prev">←</button>
+            <button id="next">→</button>    
         </div>
 
         <div class="container">
@@ -20,7 +20,7 @@
             <img src="pic1.png" alt="" width="80" height="60" class="thumbnail">
             <img src="pic2.png" alt="" width="80" height="60" class="thumbnail">
         </div>
-
     </main>
+    <script src="main.js"></script>
 </body>
 </html>
